# ocaml-dssi

./: .travis.yml  CHANGES  Makefile.in  bootstrap  configure.ac  dssi.opam  dune-project
.github/workflows/: main.yml
examples/: Makefile  dune  inspect.ml  test.ml
src/: META.in  Makefile  Makefile.in  dssi.ml  dssi.mli  dssi_stubs.c  dune
