opam-version: "2.0"
name: "dssi"
version: "0.1.2"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-dssi"
build: [
  ["./bootstrap"] {pinned}
  ["./configure" "--prefix" prefix]
  [make "clean"] {pinned}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "ocamlfind" {pinned}
  "ladspa"
]
depexts: [
  ["dssi-dev"] {os-distribution = "debian"}
  ["dssi-dev"] {os-distribution = "ubuntu"}
  ["dssi-devel"] {os-distribution = "centos"}
  ["dssi-devel"] {os-distribution = "fedora"}
  ["dssi-devel"] {os-family = "suse"}
  ["dssi"] {os-distribution = "nixos"}
  ["dssi"] {os-distribution = "arch"}
]
bug-reports: "https://github.com/savonet/ocaml-dssi/issues"
dev-repo: "git+https://github.com/savonet/ocaml-dssi.git"
synopsis: "Bindings for the DSSI API which provides audio synthesizers"
