opam-version: "2.0"
name: "dssi"
version: "0.1.3"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-dssi"
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix]
  [make "clean"] {dev}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "ocamlfind" {build}
  "ladspa" { >= "0.1.6" }
]
depexts: [
  ["dssi-dev"] {os-family = "debian"}
  ["dssi-devel"] {os-distribution = "centos"}
  ["dssi-devel"] {os-distribution = "fedora"}
  ["dssi-devel"] {os-family = "suse"}
  ["dssi"] {os-distribution = "nixos"}
  ["dssi"] {os-distribution = "arch"}
  ["drfill/liquidsoap/libdssi"] {os = "macos" & os-distribution = "homebrew"}
]
bug-reports: "https://github.com/savonet/ocaml-dssi/issues"
dev-repo: "git+https://github.com/savonet/ocaml-dssi.git"
synopsis: "Bindings for the DSSI API which provides audio synthesizers"
